correct column sizing - columns + shift should add to 12

--- a/css/main.css
+++ b/css/main.css
@@ -549,7 +549,7 @@ header {
   float: left;
   display: block;
   margin-right: 2.12766%;
-  width: 40.42553%;
+  width: 44.68085%;
 }
 .about__primary:last-child,
 .about__secondary:last-child {
